--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
   </tr>
   <tr>
     <td>Chicago</td>
+    <td>Illinois</td>
+    <td>2,716,450</td>
+  </tr>
+  <tr>
+    <td>Houston</td>
   </tr>
 </table>
   
